--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "Euro 2016 IRC integration",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ascii-table": "0.0.9",
+    "bluebird": "^3.4.0",
+    "chrono-node": "^1.2.3",
+    "irc": "^0.5.0",
+    "moment": "^2.13.0",
+    "request": "^2.72.0"
+  }
 }
