--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ascii-table": "0.0.9",
     "bluebird": "^3.4.0",
     "chrono-node": "^1.2.3",
+    "dotenv": "^2.0.0",
     "irc": "^0.5.0",
     "moment": "^2.13.0",
     "request": "^2.72.0"
