--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-    "name": "euro-2016-irc",
-    "version": "1.0.0",
-    "description": "Euro 2016 IRC integration",
-    "main": "index.js",
-    "engines": {
-        "node": "4.4.3"
-    },
-    "scripts": {
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "ascii-table": "0.0.9",
-        "bluebird": "^3.4.0",
-        "chrono-node": "^1.2.3",
-        "dotenv": "^2.0.0",
-        "irc": "^0.5.0",
-        "moment": "^2.13.0",
-        "request": "^2.72.0"
-    }
+  "name": "euro-2016-irc",
+  "version": "1.0.0",
+  "description": "Euro 2016 IRC integration",
+  "main": "index.js",
+  "engines": {
+    "node": "4.4.3"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "ascii-table": "0.0.9",
+    "bluebird": "^3.4.0",
+    "chrono-node": "^1.2.3",
+    "dotenv": "^2.0.0",
+    "irc": "^0.5.0",
+    "moment": "^2.13.0",
+    "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.11.1"
+  }
 }
