--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive test/"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,10 @@
     "request": "^2.72.0"
   },
   "devDependencies": {
-    "eslint": "^2.11.1"
+    "chai": "^3.5.0",
+    "eslint": "^2.11.1",
+    "mocha": "^2.5.3",
+    "nock": "^8.0.0",
+    "sinon": "^1.17.4"
   }
 }
