--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^2.0.0",
     "irc": "^0.5.0",
     "moment": "^2.13.0",
+    "moment-precise-range-plugin": "^1.2.0",
     "request": "^2.72.0"
   },
   "devDependencies": {
