--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "ascii-table": "0.0.9",
+    "aws-sdk": "^2.3.17",
     "bluebird": "^3.4.0",
     "chrono-node": "^1.2.3",
     "dotenv": "^2.0.0",
