--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "irc": "^0.5.0",
     "moment": "^2.13.0",
     "moment-precise-range-plugin": "^1.2.0",
+    "moment-timezone": "^0.5.4",
     "request": "^2.72.0"
   },
   "devDependencies": {
