--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "request": "^2.72.0"
   },
   "devDependencies": {
+    "aws-sdk-mock": "^1.3.0",
     "chai": "^3.5.0",
     "eslint": "^2.11.1",
     "mocha": "^2.5.3",
