--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "aws-sdk-mock": "^1.3.0",
     "chai": "^3.5.0",
     "eslint": "^2.11.1",
+    "istanbul": "^0.4.2",
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
-    "sinon": "^1.17.4",
-    "istanbul": "^0.4.2"
+    "qs": "^6.2.0",
+    "sinon": "^1.17.4"
   }
 }
